@@ -38,3 +38,4 @@
 *Tablelist.BorderWidth:              1              
 *Tree.openIcons:                     triangle
 *Tree.treeColor:                     
+
